--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "A simple koa server",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/app.ts",
-    "build": "tsc",
+    "start": "vite --mode production",
+    "dev": "vite",
+    "build": "vite build",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write src/**/*.ts",
     "prepare": "husky"
@@ -25,6 +26,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.4.16",
     "@types/jest": "^29.5.12",
     "@types/koa": "^2.15.0",
     "@types/koa-router": "^7.4.8",
@@ -38,6 +40,8 @@
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10",
+    "vite-plugin-node": "^3.1.0"
   }
 }
