--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
+  "include": ["vite.config.*"],
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "ESNext",
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
@@ -18,9 +19,10 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "types": ["dotenv", "jest", "reflect-metadata"],
+    "types": ["vite/client", "dotenv", "jest", "reflect-metadata"],
     "resolveJsonModule": true,
     "experimentalDecorators": true,
     "moduleResolution": "node"
-  }
+  },
+  "files": ["node.d.ts"]
 }
