--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
-  "include": ["vite.config.*"],
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2015",
+    "target": "ESNext",
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
